--- a/3_Model_analysis_stochastic.Rmd
+++ b/3_Model_analysis_stochastic.Rmd
@@ -4,9 +4,9 @@ title: Document 3- R codes for the asymptotic analyses of a stage-structured mat
 author: "S. Benhaiem, L. Marescot"
 date: '`r Sys.time()`'
 output:
+  pdf_document: default
   html_document:
     code_folding: hide
-  pdf_document: default
   word_document: default
 ---
 
@@ -34,7 +34,7 @@ blockquote, blockquote > *:not(a) { color: black }
 </style>
 
 
-This code presents the stochastic analysis of the matrix model. To calculate standard deviations of ($\lambda$) and R0 (Figure 1), confidence intervals for the sensitivity analysis of ($\lambda$) and R0 (Figures 2,3) and to describe changes in population size over time while accounting for parameter uncertainty (Figure 5), we used Monte Carlo iterations. 
+This code presents the stochastic analysis of the matrix model. To calculate standard deviations of ($\lambda$) and R0 (Figure 1), confidence intervals for the sensitivity analysis of ($\lambda$) and R0 (Figures 2,3) and to describe changes in population size over time while accounting for parameter uncertainty (Figure 5), we used Monte Carlo iterations. It requires the packages 'popbio' 2.4.4 (Stubben and Milligan 2007) and 'popdemo' 1.3-0 (Stott et al. 2012). 
 
 
 This code is structured as follows:
@@ -58,6 +58,9 @@ First, we create a function to compile the population indicators we are interest
 
 
 ```{r, message = FALSE}
+
+start_time <- Sys.time()
+
 library(popdemo)
 library(popbio)
 
@@ -128,7 +131,7 @@ Second, we load the text file containing the regression coefficients and the R f
 ```{r} 
 data<-read.table("./RegressionCoefficient.txt", header = TRUE) 
 
-MCiter<-1000 # Number of Monte Carlo iterations 
+MCiter<-100 # Number of Monte Carlo iterations (put 1000)
 
 checkNodisease <- FALSE # Check if we are in the projection phase were the disease is extinct (then set the infection probability to 0 in the MC_simualtionsUnique.R file)
 
@@ -856,6 +859,9 @@ c("Breeding SA.H","Breeding SA.L","Breeding B.H","Breeding B.L","Breeding NB.H",
                    NA))
 
 
+end_time <- Sys.time()
+run_time <-end_time-start_time
+round(run_time,digits = 2)
 
 ```
 
