--- a/2_Model analysis_asymptotic.Rmd
+++ b/2_Model analysis_asymptotic.Rmd
@@ -361,33 +361,80 @@ nf <- layout(matrix(c(0,0,0,0,1,0,0,2,0,0,3,0,0,0,0),3, byrow = F),widths= c(0.1
 # Pre-epidem
 par(mar=c(5.1,5.1,4.1,2.1))
 
-stage.vector.plot.mod(sirpre, proportions=T, 
-                    cex.lab =1.8,cex.axis=1.8,col=c("blue","red","dark green"),
-                    las =1,xlim=c(0,10),ylab="")
+stage.vector.plot.mod(sirpre, proportions=T, axes =F,
+                      cex.lab =1.8,cex.axis=1.8,col=c("#59B2E6","#CC6600","#009980"),
+                      las =1,xlim=c(0,10),ylim = c(0,1),ylab="")
 
 mtext(side = 2,text=c("Proportion"), line =4,cex = 1.3)
-mtext(side = 3,text=c("a) pre-epidem"), line =1.7,cex = 1.3)
+mtext(side = 3,text=expression(paste(bold("a"))),adj=0, line =1.7,cex = 1.8)
+
+# x1 and y1 to draw the axes
+x1 <- c(-0.5:10)
+y1 <- c(-0.1:1)
+
+# x2 and y2 to add labels and tickmarks
+x2 <- c(0,2,4,6,8,10)
+y2 <- c(0,0.2,0.4,0.6,0.8,1)
+
+axis(1,at=x1,las=1,tck=0, labels=NA)
+axis(2,at=y1,las=1,tck=0, labels =NA)
+
+axis(1,at=x2,las=1,cex.axis=1.5)
+axis(2,at=y2,las=1,cex.axis=1.5)
+
 
 # epidem
 par(mar=c(5.1,5.1,4.1,2.1))
 
-stage.vector.plot.mod(sirepidem, proportions=T, 
-                    cex.lab =1.8,cex.axis=1.8,col=c("blue","red","dark green"),
-                    las =1,xlim=c(0,10),ylab="")
+stage.vector.plot.mod(sirepidem, proportions=T, axes =F,
+                      cex.lab =1.8,cex.axis=1.8,col=c("#59B2E6","#CC6600","#009980"),
+                      las =1,xlim=c(0,10),ylim = c(0,1), ylab="")
 
 mtext(side = 2,text=c("Proportion"), line =4,cex = 1.3)
-mtext(side = 3,text=c("b) epidem"), line =1.7,cex = 1.3)
+mtext(side = 3,text=expression(paste(bold("b"))),adj=0, line =1.7,cex = 1.8)
+
+# x1 and y1 to draw the axes
+x1 <- c(-0.5:10)
+y1 <- c(-0.1:1)
+
+# x2 and y2 to add labels and tickmarks
+x2 <- c(0,2,4,6,8,10)
+y2 <- c(0,0.2,0.4,0.6,0.8,1)
+
+axis(1,at=x1,las=1,tck=0, labels=NA)
+axis(2,at=y1,las=1,tck=0, labels =NA)
+
+axis(1,at=x2,las=1,cex.axis=1.5)
+axis(2,at=y2,las=1,cex.axis=1.5)
 
 
 # post-epidem
 par(mar=c(5.1,5.1,4.1,2.1))
 
-stage.vector.plot.mod(sirpost, proportions=T, 
-                    cex.lab =1.8,cex.axis=1.8,col=c("blue","red","dark green"),
-                    las =1,xlim=c(0,10),ylab="")
+stage.vector.plot.mod(sirpost, proportions=T, axes=F,
+                      cex.lab =1.8,cex.axis=1.8,col=c("#59B2E6","#CC6600","#009980"),
+                      las =1,xlim=c(0,10),ylim = c(0,1),ylab="")
 
 mtext(side = 2,text=c("Proportion"), line =4,cex = 1.3)
-mtext(side = 3,text=c("c) post-epidem"), line =1.7,cex = 1.3)
+mtext(side = 3,text=expression(paste(bold("c"))),adj=0, line =1.7,cex = 1.8)
+
+# x1 and y1 to draw the axes
+x1 <- c(-0.5:10)
+y1 <- c(-0.1:1)
+
+# x2 and y2 to add labels and tickmarks
+x2 <- c(0,2,4,6,8,10)
+y2 <- c(0,0.2,0.4,0.6,0.8,1)
+
+axis(1,at=x1,las=1,tck=0, labels=NA)
+axis(2,at=y1,las=1,tck=0, labels =NA)
+
+axis(1,at=x2,las=1,cex.axis=1.5)
+axis(2,at=y2,las=1,cex.axis=1.5)
+
+
+legend(6,1.3, c("S", "I", "R"),col=c("#59B2E6","#CC6600","#009980"), lty=1, lwd =2.8, xpd=T)
+
 
 end_time <- Sys.time()
 run_time <-end_time-start_time
